2005-11-29  Bruno coudoin  <bruno.coudoin@free.fr>

	Proof of concect for electric activity is almost completed.
	If /usr/bin/gnucap is installed, create a schematic and click
	the OK button. The voltage and current value will be displayed
	on stdout.

	* boards/boardicons/electric.png:
	* boards/electric.xml.in:
	* boards/electric/battery.png:
	* boards/electric/bulb.png:
	* boards/electric/connect.png:
	* boards/electric/diod.png:
	* boards/electric/resistor.png:
	* src/boards/python/electric.py:

2005-11-27  Bruno coudoin  <bruno.coudoin@free.fr>

	Started the electric activiry. Nothing runs yet.

	* boards/electric.xml.in:

2005-11-27  Bruno coudoin  <bruno.coudoin@free.fr>

	Added Hungarian audio voices by
	Miklos Merenyi & Margareta Merenyi Released under GPL.
	Updated web site screenshots.
	Aplyed patch from Yann Dirson for Python detection.
	
	* boards/Makefile.am:
	* boards/colors.xml.in:
	* boards/sounds/Makefile.am:
	* boards/sounds/hu/.cvsignore:
	* boards/sounds/hu/Makefile.am:
	* boards/sounds/hu/alphabet/.cvsignore:
	* boards/sounds/hu/alphabet/10.ogg:
	* boards/sounds/hu/alphabet/11.ogg:
	* boards/sounds/hu/alphabet/12.ogg:
	* boards/sounds/hu/alphabet/13.ogg:
	* boards/sounds/hu/alphabet/14.ogg:
	* boards/sounds/hu/alphabet/15.ogg:
	* boards/sounds/hu/alphabet/16.ogg:
	* boards/sounds/hu/alphabet/17.ogg:
	* boards/sounds/hu/alphabet/18.ogg:
	* boards/sounds/hu/alphabet/19.ogg:
	* boards/sounds/hu/alphabet/20.ogg:
	* boards/sounds/hu/alphabet/Makefile.am:
	* boards/sounds/hu/alphabet/U0031.ogg:
	* boards/sounds/hu/alphabet/U0032.ogg:
	* boards/sounds/hu/alphabet/U0033.ogg:
	* boards/sounds/hu/alphabet/U0034.ogg:
	* boards/sounds/hu/alphabet/U0035.ogg:
	* boards/sounds/hu/alphabet/U0036.ogg:
	* boards/sounds/hu/alphabet/U0037.ogg:
	* boards/sounds/hu/alphabet/U0038.ogg:
	* boards/sounds/hu/alphabet/U0039.ogg:
	* boards/sounds/hu/alphabet/gcompris_alphabet_hu.assetml.in:
	* boards/sounds/hu/colors/.cvsignore:
	* boards/sounds/hu/colors/Makefile.am: